# Version History

## unreleased

## 0.3.0 

* MCCS-156 - controller resource management model
* MCCS-225 - hardware model
* MCCS-207 - refactor helm charts to use tango-util

## 0.2.1 

* MCCS-227 - address segfaults

## 0.2.0

test release - to verify MCCS-209

## 0.1.2

Update to lmc-base-classes version 0.6.1

## 0.1.1

Patch release to create versioned docker image

## 0.1.0

Initial release

* control model hierachy of MCCS LMC Tango device classes
* cli tools for _master_ and _tile_
* tox environment
* k8s helm chart for tango device containers